test/compile_errors/stage1/exe/private_main_fn.zig
fn main() void {}

// private main fn
//
// error: 'main' is private
// tmp.zig:1:1: note: declared here
